deploy: cf874acbbd3a83475607aa70694e36c386e5a672

--- a/rgbd_sod.html
+++ b/rgbd_sod.html
@@ -2,13 +2,19 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <title>rgbd_sod</title>
-  <link rel="stylesheet" href="./src/lixiaolai.css" type="text/css" >
-  <script src="./src/sort_table.js"></script>
+<meta charset="UTF-8">
+<title>rgbd_sod</title>
+<link rel="stylesheet" href="./src/lixiaolai.css" type="text/css" >
+<script src="./src/sort_table.js"></script>
 </head>
 
 <body>
+<p>
+<ul>
+<li><a href='./rgbd_sod.html'>RGBD_SOD</a></li>
+</ul>
+</p>
+<p>
 <h1>RGBD SOD评估结果</h1>
 
 <h2>LFSD</h2>
@@ -3455,6 +3461,7 @@
 </tbody>
 </table>
 
+</p>
 </body>
 
 </html>
